--- a/views/pages/docs.pug
+++ b/views/pages/docs.pug
@@ -1,11 +1,6 @@
 extends ../layouts/default
 
 block content
-  // header ----------------------------------------------------------------------------------------
-  //- .small-header.mb-lg-2
-  //-   .small-content.container.text-white.img-fluid(alt='img-responsive')
-  //-     h2
-  //-       | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
   .container.mt-5
     section.mb-5.mt-5
       h2.font-weight-bold.mb-3.border-bottom
@@ -22,12 +17,12 @@ block content
       |
       p
         | For EOS set:
-        a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css
+        a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css', data-event-category='External link', data-event-action='Link to EOS Icons CDN', data-event-label='Docs page', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css
       p.command &ltlink rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons/dist/css/eos-icons.css"&gt
       p
       p
         | For Extended EOS set:
-        a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css
+        a(href='https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css', data-event-category='External link', data-event-action='Link to EOS Icons Extended CDN', data-event-label='Docs page', target='_blank')  https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css
       p.command &ltlink rel="stylesheet" href="https://cdn.jsdelivr.net/npm/eos-icons/dist/extended/css/eos-icons-extended.css"&gt
       p
       p.d-inline  import them in your
@@ -41,7 +36,7 @@ block content
       p.d-inline To download the zip file of
       p.command /dist
       |  folder click
-      a(href='https://gitlab.com/SUSE-UIUX/eos-icons/-/archive/master/eos-icons-master.zip?path=dist', target='_blank')  here
+      a(href='https://gitlab.com/SUSE-UIUX/eos-icons/-/archive/master/eos-icons-master.zip?path=dist', data-event-category='External link', data-event-action='Link to EOS Icons zip file', data-event-label='Docs page', target='_blank')  here
     section.mb-5.pb-2
       h2.font-weight-bold.mb-3.mt-3.border-bottom Using EOS icons in your projects
       |
@@ -68,7 +63,7 @@ block content
       code.mb-3.codes &lt;i class=&quot;eos-icons&quot;&gt;LIGATURE_OF_THE_ICON&lt;/i&gt;
       p
         | Where the LIGATURE_OF_THE_ICON is the name of the icon. Use our
-        a(href='https://eos-icons.eosdesignsystem.com/cheatsheet.html', target='_blank')  cheatsheet
+        a(href='https://eos-icons.eosdesignsystem.com/cheatsheet.html', data-event-category='Internal link', data-event-action='Link to cheatsheet', data-event-label='Docs page', target='_blank')  cheatsheet
         p
           | to see the icon's name.
     section.mb-5.pb-2
@@ -81,13 +76,13 @@ block content
         | &lt;i class=&quot;eos-icons eos-icon-loading&quot;&gt;&lt;/i&gt;
       p
         | See the other animated icons classes in our
-        a(href='https://eos-icons.eosdesignsystem.com/cheatsheet.html', target='_blank')  demo page
+        a(href='https://eos-icons.eosdesignsystem.com/cheatsheet.html', data-event-category='Internal link', data-event-action='Link to cheatsheet (animated)', data-event-label='Docs page', target='_blank')  demo page
         | . Click on the icon you want to use to see the code snippet.
     section.mb-5.pb-2
       h2.font-weight-bold.mb-3.border-bottom EOS extended version with Material Design
       p
         | Since EOS icons are designed following the
-        a(href='https://material.io/design/iconography/system-icons.html', target='_blank')  Material Design guidelines
+        a(href='https://material.io/design/iconography/system-icons.html', data-event-category='External link', data-event-action='Link to MD icons design principles', data-event-label='Docs page', target='_blank')  Material Design guidelines
         |  and made to work together with Material Icons, we decided to include an extended version of EOS icons for easy implementation.
       p.mb-4.mb-4.d-inline
         | With the extended version you only need to use 1 class for all icons (EOS and Material Design). To implement it, you need to grab the
@@ -104,7 +99,7 @@ block content
       p
       p
         | For more information about Material Design Icons, please refer to the
-        a(href='https://github.com/google/material-design-icons', target='_blank')  original MD icons repository
+        a(href='https://github.com/google/material-design-icons', data-event-category='External link', data-event-action='Link to MD icons main page', data-event-label='Docs page', target='_blank')  original MD icons repository
         |  where you can find the corresponding licensing and documentation.
       h4.font-weight-bold Example of usage of the EOS extended
       code.mb-3.codes
@@ -192,4 +187,4 @@ block content
           br
     section.mb-5.pb-2
       p.mb-3 EOS icons is open source. Go to our Gitlab repository to find out more :
-        a(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank')  https://gitlab.com/SUSE-UIUX/eos-icons
+        a(href='https://gitlab.com/SUSE-UIUX/eos-icons', data-event-category='External link', data-event-action='Link to Gitlab repository', data-event-label='Docs page', target='_blank')  https://gitlab.com/SUSE-UIUX/eos-icons
