--- a/views/shared/layout/footer.pug
+++ b/views/shared/layout/footer.pug
@@ -9,7 +9,7 @@ section#js-contact.bottom-links.text-center.text-white
           | Feedback
         p.min-height
           | Got some ideas or something nice to say to us?
-        a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com')
+        a.btn.btn-outline-light(href='mailto:eos-design-system@googlegroups.com', data-event-category='External link', data-event-action='Send feedback to Google groups', data-event-label='Footer')
           | Send us feedback
       .col-sm-6.col-lg-3
         h4
@@ -17,7 +17,7 @@ section#js-contact.bottom-links.text-center.text-white
           | Chat on Slack
         p.min-height
           | Ask us questions, give us ideas, propose ideas. Let's chat!
-        a.btn.btn-outline-light(href='https://slack.eosdesignsystem.com/', target='_blank')
+        a.btn.btn-outline-light(href='https://slack.eosdesignsystem.com/', data-event-category='External link', data-event-action='Link to EOS Slack', data-event-label='Footer', target='_blank')
           | Join Slack channel
       .col-sm-6.col-lg-3
         h4
@@ -26,9 +26,9 @@ section#js-contact.bottom-links.text-center.text-white
         p.min-height
           | Do you want to fork EOS-Icons, contribute, or report an issue?
         .btn-group-footer
-          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank')
+          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons', data-event-category='External link', data-event-action='Link to Gitlab repo', data-event-label='Footer', target='_blank')
             | Repository
-          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues', target='_blank')
+          a.btn.btn-outline-light(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues', data-event-category='External link', data-event-action='Link to Gitlab issues', data-event-label='Footer', target='_blank')
             | Issues
       .col-sm-6.col-lg-3
         h4
@@ -36,5 +36,5 @@ section#js-contact.bottom-links.text-center.text-white
           | Twitter
         p.min-height
           | Get the latest news, meet the team, and more.
-        a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', target='_blank')
+        a.btn.btn-outline-light(href='https://twitter.com/eosdesignsystem', data-event-category='External link', data-event-action='EOS in Twitter', data-event-label='Footer', target='_blank')
           | EOS in Twitter
