--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -24,7 +24,7 @@ block content
             | We appreciate your contribution to EOS icons and look
             | forward to hearing more about how it helps your
             | products and projects
-          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons', target='_blank') Contribute to EOS Icons
+          a.btn.btn-dark(href='https://gitlab.com/SUSE-UIUX/eos-icons', data-event-category='External link', data-event-action='Link to Gitlab repository', data-event-label='Home page', target='_blank') Contribute to EOS Icons
     .gray-bg
       // Lot of icons to choose from -------------------------------------------------------------------
       .container.padding-top-md
@@ -88,7 +88,7 @@ block content
               | foundations that address design from both a broad
               | and detailed perspective.
             br
-            a.btn.btn-dark(href='/cheatsheet.html#profile') Check out Extended EOS Icons
+            a.btn.btn-dark(href='/cheatsheet.html#profile', data-event-category='Internal link', data-event-action='Link to extended icons in cheatsheet', data-event-label='Home page') Check out Extended EOS Icons
       // Cheatsheet and new icons request ---------------------------------------------------------------
       .container-fluid
         .row
@@ -99,7 +99,7 @@ block content
                 | Do you already know how to put these icons
                 | better into practice? We might have some
                 | advices for you.
-              a.btn.btn-outline-light.ml-5.mt-1.mb-1(href='/cheatsheet.html') Check out Cheatsheet
+              a.btn.btn-outline-light.ml-5.mt-1.mb-1(href='/cheatsheet.html', data-event-category='Internal link', data-event-action='Link to cheatsheet', data-event-label='Home page') Check out the Cheatsheet
           .col-lg-6.bg-request.d-flex.flex-row.align-items-center.p-3
             img.img-fluid(src='assets/images/landing/rocket2.png')
             .d-inline-block.align-top.mx-auto
@@ -107,14 +107,14 @@ block content
                 | Are you working on an open source project and
                 | need some icons? We can design them for you
                 | and include them in EOS icons.
-              button.btn.btn-outline-light.ml-5.mt-1(data-toggle='modal', data-target='#exampleModalCenter') Request new icons
+              button.btn.btn-outline-light.ml-5.mt-1(data-toggle='modal', data-target='#exampleModalCenter', data-event-category='Internal link', data-event-action='Request icon modal', data-event-label='Home page') Request new icons
       // Checkout EOS DS --------------------------------------------------------------------------------
       .container-fluid.top-gradient.text-white.plane-container
         .d-inline-block.text-left.mt-sm-4.pt-3.left-padding.plane-index
           h1 Try EOS Icons with EOS Design System
           p We are a part of EOS Design system and together we work like a charm
         .d-inline-block.text-center.plane-index
-          a.btn.btn-outline-light.ml-5.mb-5(href='https://www.eosdesignsystem.com/', target='_blank') Check out EOS DS
+          a.btn.btn-outline-light.ml-5.mb-5(href='https://www.eosdesignsystem.com/', data-event-category='External link', data-event-action='Link to EOS Design system', data-event-label='Home page', target='_blank') Check out EOS DS
         .d-inline-block.ml-5
           img.d-inline-block.plane-img(src='assets/images/landing/plane.png')
       // Contributors section ---------------------------------------------------------------------------
@@ -122,37 +122,37 @@ block content
         h3.text-center
           | Special thanks to all the superheroes that made it happen
         .contributors.text-center.padding-top-md
-          a(title='Cynthia Sanchez on twitter', href='https://twitter.com/cyntss', target='_blank')
+          a(title='Cynthia Sanchez on Twitter', href='https://twitter.com/cyntss', data-event-category='External link', data-event-action='Cynthia Sanchez on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image1.png')
             p.text-decoration-none.text-dark Cynthia Sanchez
-          a(title='Zvezdana Marjanovic on Linked-In', href='https://www.linkedin.com/in/zvezdanam', target='_blank')
+          a(title='Zvezdana Marjanovic on LinkedIn', href='https://www.linkedin.com/in/zvezdanam', data-event-category='External link', data-event-action='Zvezdana Marjanovic on LinkedIn', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image8.png')
             p.text-decoration-none.text-dark Zvezdana Marjanovic
-          a(title='Manuele Carlini on twitter', href='https://twitter.com/manuelecarlini', target='_blank')
+          a(title='Manuele Carlini on Twitter', href='https://twitter.com/manuelecarlini', data-event-category='External link', data-event-action='Manuele Carlini on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image3.png')
             p.text-decoration-none.text-dark Manuele Carlini
-          a(title='Richa Bhist on Linked-In', href='https://www.linkedin.com/in/richabisht/', target='_blank')
+          a(title='Richa Bisht on LinkedIn', href='https://www.linkedin.com/in/richabisht/', data-event-category='External link', data-event-action='Richa Bhist on LinkedIn', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image6.png')
             p.text-decoration-none.text-dark Richa Bhist
-          a(title='Jesus Herman on twitter', href='https://twitter.com/hesusjerman', target='_blank')
+          a(title='Jesus Herman-Marina on Twitter', href='https://twitter.com/hesusjerman', data-event-category='External link', data-event-action='Jesus Herman-Marina on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image4.png')
-            p.text-decoration-none.text-dark Jesus Herman
-          a(title='Sorin Curescu on twitter', href='https://twitter.com/en3sis', target='_blank')
+            p.text-decoration-none.text-dark Jesus Herman-Marina
+          a(title='Sorin Curescu on Twitter', href='https://twitter.com/en3sis', data-event-category='External link', data-event-action='Sorin Curescu on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image2.png')
             p.text-decoration-none.text-dark Sorin Curescu
-          a(title='Abhinandan Sharma on Linked-In', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', target='_blank')
+          a(title='Abhinandan Sharma on LinkedIn', href='https://www.linkedin.com/in/abhinandan-sharma-672299150/', data-event-category='External link', data-event-action='Abhinandan Sharma on LinkedIn', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image5.png')
             p.text-decoration-none.text-dark Abhinandan Sharma
-          a(title='Kartikay Bhutani on twitter', href='https://twitter.com/kbhutani0001', target='_blank')
+          a(title='Kartikay Bhutani on Twitter', href='https://twitter.com/kbhutani0001', data-event-category='External link', data-event-action='Kartikay Bhutani on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/image7.png')
             p.text-decoration-none.text-dark Kartikay Bhutani
-          a(title='Carla Moratillo on Dribbble', href='https://dribbble.com/Carla_Isela', target='_blank')
+          a(title='Carla Moratillo on Dribbble', href='https://dribbble.com/Carla_Isela', data-event-category='External link', data-event-action='Carla Moratillo on Dribbble', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/carla.jpg')
             p.text-decoration-none.text-dark Carla Moratillo
-          a(title='Saurabh Sharma on Twitter', href='https://twitter.com/SAURABH20944279?s=09', target='_blank')
+          a(title='Saurabh Sharma on Twitter', href='https://twitter.com/SAURABH20944279?s=09', data-event-category='External link', data-event-action='Saurabh Sharma on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/saurabh.jpg')
             p.text-decoration-none.text-dark Saurabh Sharma
-          a(title='Kateryna Marchak on Twitter', href='https://twitter.com/ZenZippy', target='_blank')
+          a(title='Kateryna Marchak on Twitter', href='https://twitter.com/ZenZippy', data-event-category='External link', data-event-action='Kateryna Marchak on Twitter', data-event-label='Home page', target='_blank')
             img.contributors-img(src='assets/images/landing/kathie.png')
             p.text-decoration-none.text-dark Kateryna Marchak
           
