--- a/views/pages/thankyou-page.pug
+++ b/views/pages/thankyou-page.pug
@@ -5,4 +5,4 @@ block content
     h2 Thank you for using EOS!
     img.js-thankyou-img(src='assets/images/eos-bunny.png', alt='EOS Bunny', onload='autoDownloadFont()')
     p.js-download-timer 
-    button.btn.btn-outline-secondary(type='submit', onclick='downloadFont()') EOS-custom-font.zip
+    button.btn.btn-outline-secondary(type='submit', onclick='downloadFont()', data-event-category='Internal link', data-event-action='Download font', data-event-label='Thankyou page') EOS-custom-font.zip
