--- a/eos-icons-react/src/assets/scss/index.scss
+++ b/eos-icons-react/src/assets/scss/index.scss
@@ -5,3 +5,4 @@
   ========================================================================== */
 @import './components/navigation';
 @import './components/footer';
+@import './components/page_header';
