--- a/eos-icons-react/src/assets/scss/index.scss
+++ b/eos-icons-react/src/assets/scss/index.scss
@@ -1,8 +1,3 @@
 @import './variables/index';
 @import './layout/index';
-
-/* Components
-  ========================================================================== */
-@import './components/navigation';
-@import './components/footer';
-@import './components/page_header';
+@import './components/index'
