Create GeneratingFont component

--- a/eos-icons-react/src/assets/scss/variables/colors.scss
+++ b/eos-icons-react/src/assets/scss/variables/colors.scss
@@ -11,7 +11,8 @@ $hyper-link-color: #0285c4;
 $hyper-link-hover-color: #15578f;
 $command: #c0341d;
 $codes: #505050;
-$nav-border-color: #E3864E;
+$nav-border-color: #e3864e;
+$icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 
 /* Gradient */
 
