added search bar UI only

--- a/eos-icons-react/src/assets/scss/index.scss
+++ b/eos-icons-react/src/assets/scss/index.scss
@@ -6,3 +6,4 @@
 @import './components/navigation';
 @import './components/footer';
 @import './components/page_header';
+@import './components/searchBar';
