Create CustomizeIconsPanel component

--- a/eos-icons-react/src/assets/scss/index.scss
+++ b/eos-icons-react/src/assets/scss/index.scss
@@ -8,3 +8,4 @@
 @import './components/page_header';
 @import './components/thank-you.scss';
 @import './components/generating-font.scss';
+@import './components/customize-icons-panel.scss';
