--- a/eos-icons-react/src/assets/scss/components/icon_list.scss
+++ b/eos-icons-react/src/assets/scss/components/icon_list.scss
@@ -58,13 +58,13 @@
 }
 
 
-/* DEMO */
+/* DEMO, REMOVE WHEN THE SPECIFIC COMPONENT IS READY */
 .icon-info-demo {
   width: 100%;
-    position: fixed;
-    bottom: 20px;
-    background: #f8f8f8;
-    left: 0;
-    height: auto;
-    padding: 20px;
+  position: fixed;
+  bottom: 50px;
+  background: #f8f8f8;
+  left: 0;
+  height: auto;
+  padding: 20px;
 }
