Disallow indexing for now

--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -4,6 +4,7 @@ html
     title= 'EOS icons'
     meta(name='description', content= 'EOS icons font. The open source icons to made to extend Material Icons.')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=0')
+    meta(name='robots', content='noindex')
     meta(property='og:title', content='EOS icons')
     meta(property='og:type', content='website')
     meta(property='og:url', content='http://eos-icons.eosdesignsystem.com')
