--- a/eos-icons-react/src/assets/scss/layout/general.scss
+++ b/eos-icons-react/src/assets/scss/layout/general.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 
-html, body {
+body {
   font-family: 'Lato', sans-serif;
 }
