--- a/eos-icons-react/src/assets/scss/layout/general.scss
+++ b/eos-icons-react/src/assets/scss/layout/general.scss
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap');
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: $font-family;
+  font-weight: $font-weight;
+  font-size: $font-size;
+  color: $color;
+  line-height: $line-height;
+}
+
+.app-container {
+  min-height: calc(100vh - 56px);
+}
+
+.container {
+  max-width: 1140px;
+  margin: auto;
+  padding: $xl;
 }
