made searching case insensitive and imported searchBar.scss

--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -2,8 +2,9 @@
   ========================================================================== */
 @import './buttons';
 @import './footer';
+@import './generating-font';
+@import './icon_list';
 @import './navigation';
 @import './page_header';
-@import './icon_list';
+@import './searchBar';
 @import './tabs';
-@import './generating-font';
