Basic modal created

--- a/eos-icons-react/src/assets/scss/variables/colors.scss
+++ b/eos-icons-react/src/assets/scss/variables/colors.scss
@@ -13,6 +13,7 @@ $command: #c0341d;
 $codes: #505050;
 $nav-border-color: #e3864e;
 $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
+$modal-background-color: rgba(0, 0, 0, 0.7);
 
 /* Gradient */
 
