--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -4,6 +4,7 @@
 @import './footer';
 @import './generating-font';
 @import './icon_list';
+@import './modal';
 @import './navigation';
 @import './page_header';
 @import './searchBar';
