Create Switch component and remove Customize page

--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -7,4 +7,5 @@
 @import './icon_list';
 @import './tabs';
 @import './generating-font';
-@import './components/download-eos-icons.scss';
+@import './download-eos-icons.scss';
+@import './switch.scss';
