--- a/eos-icons-react/src/assets/scss/pages/home.scss
+++ b/eos-icons-react/src/assets/scss/pages/home.scss
@@ -7,18 +7,8 @@
   padding: $xl;
 }
 
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.padding-vertical-lg {
-  padding: 80px 0px;
-}
-
 .padding-top-md {
-  padding-top: 50px;
+  padding-top: $xxl;
 }
 
 .contributors {
@@ -27,14 +17,4 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.text-center {
-  text-align: center !important;
-}
-
-h3 {
-  font-size: 1.75rem;
-  line-height: 1.2;
-  font-weight: 400;
 }
