--- a/eos-icons-react/src/assets/scss/components/contributor.scss
+++ b/eos-icons-react/src/assets/scss/components/contributor.scss
@@ -1,3 +1,11 @@
+.contributors {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .contributor {
   padding: 0 10px;
   .contributors-img {
