--- a/eos-icons-react/src/assets/scss/components/customize-icons-panel.scss
+++ b/eos-icons-react/src/assets/scss/components/customize-icons-panel.scss
@@ -2,7 +2,7 @@
   padding: 16px;
   width: 100%;
   color: #5f5f5f;
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 500;
 
   .select-all-icons {
@@ -12,7 +12,7 @@
     margin: 15px 25px;
     i {
       padding-left: 6px;
-      vertical-align: sub;
+      vertical-align: auto;
     }
     &:hover {
       color: $dark-color;
@@ -26,7 +26,7 @@
     margin: 15px 25px;
     i {
       padding-left: 3px;
-      vertical-align: sub;
+      vertical-align: auto;
     }
     &:hover {
       color: $dark-color;
@@ -38,10 +38,8 @@
     float: right;
     margin-right: 110px;
     padding-bottom: 15px;
-    h6 {
-      border-color: $dark-gray;
+    span {
       display: inline;
-      margin: auto;
       padding: 10px;
     }
   }
