--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -15,4 +15,5 @@
 @import './customize-icons-panel';
 @import './contributor.scss';
 @import './icon_how_to';
-@import './docs'
+@import './docs';
+@import './code';
