--- a/eos-icons-react/src/assets/scss/layout/general.scss
+++ b/eos-icons-react/src/assets/scss/layout/general.scss
@@ -17,3 +17,11 @@ body {
   margin: auto;
   padding: $xl;
 }
+
+.command{
+  background-color: #fbe5e1;
+  border-radius: 4px;
+  color: #c0341d;
+  display: inline;
+  padding: 2px 4px;
+}
