--- a/eos-icons-react/src/assets/scss/components/footer.scss
+++ b/eos-icons-react/src/assets/scss/components/footer.scss
@@ -1,11 +1,9 @@
 footer {
   position: sticky;
-  align-items: center;
   bottom: 0;
-  padding: $m;
   background: $lightest-gray;
 
   a {
-    margin: $xxxl;
+    margin: $s;
   }
 }
