--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -11,8 +11,9 @@
 @import './tabs';
 @import './generating-font';
 @import './download-eos-icons';
-@import './switch.scss';
+@import './toggle';
 @import './customize-icons-panel';
-@import './contributor.scss';
+@import './contributor';
 @import './icon_how_to';
 @import './code';
+@import './toolbar';
