--- a/eos-icons-react/src/assets/scss/components/toolbar.scss
+++ b/eos-icons-react/src/assets/scss/components/toolbar.scss
@@ -2,6 +2,6 @@
   align-items: center;
   background-color: $lighter-gray;
   display: flex;
-  padding: $xs;
+  padding: $m;
   justify-content: flex-end;
 }
