--- a/eos-icons-react/src/assets/scss/components/icon_how_to.scss
+++ b/eos-icons-react/src/assets/scss/components/icon_how_to.scss
@@ -1,49 +1,23 @@
 .how-to-use-block {
   background-color: #f8f8f8;
-  bottom: 55px;
-  color: #212529;
-  font-size: 16px;
-  font-weight: 300;
-  height: auto;
-  left: 0;
   position: fixed;
   width: 100%;
+  bottom: 0;
   z-index: 10;
+  padding-bottom: $m;
 
-  .how-to-use-container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 960px;
-    width: 100%;
+  .container {
+    padding: 0;
   }
 
-  .h2-how-to-use {
-    display: block;
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 1.2;
-    margin-block-end: 0.83em;
-    margin-block-start: 0.83em;
-    margin-bottom: 0.5rem;
-    margin-inline-end: 0px;
-    margin-left: 1rem;
-  }
-
-  .right-pulled-small {
+  .float-right {
     cursor: pointer;
     float: right;
-    font-size: 0.5em;
-    font-weight: 400;
-    line-height: 1.2;
   }
 
   .how-to-use-input-group {
-    align-items: stretch;
     display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
-    position: relative;
-    width: 100%;
+    margin-bottom: $s;
   }
 
   #copy3 {
@@ -88,15 +62,8 @@
     z-index: 2;
   }
 
-  .md-18 {
-    font-size: 18px;
-  }
-
   .how-to-use-row {
     display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    padding-bottom: 10px;
   }
 
   .how-to-use-badge {
