Cleaning of Modal and new z-index values

--- a/old/assets/stylesheets/components/icons-picker.scss
+++ b/old/assets/stylesheets/components/icons-picker.scss
@@ -94,7 +94,7 @@
   text-align: center;
   top: 0px;
   width: 100%;
-  z-index: $icons-picker-loading-zindex;
+  z-index: $z-index-10;
 
   .loading-icon {
     left: 50%;
