--- a/eos-icons-react/src/assets/scss/components/generating-font.scss
+++ b/eos-icons-react/src/assets/scss/components/generating-font.scss
@@ -6,7 +6,7 @@
   text-align: center;
   top: 0px;
   width: 100%;
-  z-index: $icons-picker-loading-zindex;
+  z-index: $z-index-10;
 
   .loading-icon {
     font-size: 2.5rem;
