--- a/eos-icons-react/src/assets/scss/components/modal.scss
+++ b/eos-icons-react/src/assets/scss/components/modal.scss
@@ -3,72 +3,71 @@
   display: flex;
   height: 100%;
   position: fixed;
-  top: 0px;
   width: 100%;
-  z-index: $modal-zindex;
-}
+  z-index: $z-index-10;
 
-.modal-card {
-  background-color: white;
-  border-radius: 7px;
-  left: 50%;
-  max-width: 450px;
-  min-width: 300px;
-  position: fixed;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.modal-content {
-  padding: 20px;
-}
-
-.modal-btn {
-  color: white;
-  font-weight: bold;
-  padding: 16px !important;
-
-  &:hover {
-    cursor: pointer;
-    opacity: 1;
+  &-card {
+    background-color: white;
+    border-radius: 7px;
+    left: 50%;
+    max-width: 450px;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 
-  &-cancel{
-    background-color: #B8BECE;
-    border-radius: 0px 0px 0px 7px;
+  .modal-content {
+    padding: 20px;
   }
 
-  &-accept {
-    background-color: #EB796F;
-    border-radius: 0px 0px 7px 0px;
+  .modal-btn {
+    color: white;
+    font-weight: bold;
+    padding: 16px !important;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
+
+    &-cancel{
+      background-color: #B8BECE;
+      border-radius: 0px 0px 0px 7px;
+    }
+
+    &-accept {
+      background-color: #EB796F;
+      border-radius: 0px 0px 7px 0px;
+    }
   }
-}
 
-.close {
-  opacity: 0.3;
-  position: absolute;
-  right: 32px;
-  top: 6px;
-
-  &:hover {
-    opacity: 1;
-  }
-
-  &:before,
-  &:after {
-    background-color: #333;
-    content: ' ';
-    height: 15px;
-    left: 15px;
+  .close {
+    opacity: 0.3;
     position: absolute;
-    width: 3px;
-  }
+    right: 32px;
+    top: 6px;
 
-  &:before {
-    transform: rotate(45deg);
-  }
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
 
-  &:after {
-    transform: rotate(-45deg);
+    &:before,
+    &:after {
+      background-color: #333;
+      content: ' ';
+      height: 15px;
+      left: 15px;
+      position: absolute;
+      width: 3px;
+    }
+
+    &:before {
+      transform: rotate(45deg);
+    }
+
+    &:after {
+      transform: rotate(-45deg);
+    }
   }
 }
