--- a/eos-icons-react/src/assets/scss/components/badge.scss
+++ b/eos-icons-react/src/assets/scss/components/badge.scss
@@ -1,9 +1,9 @@
   .badge {
     background-color: #6c757d;
-    border-radius: 0.25rem;
+    border-radius: 100px;
     color: #fff;
     display: inline-block;
     line-height: 1;
     margin: 0 4px;
-    padding: 0.5em 0.4em;
+    padding: $xs $s;
   }
