--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -3,7 +3,7 @@
 @import './buttons';
 @import './footer';
 @import './generating-font';
-@import './icon_list';
+@import './icon-list';
 @import './modal';
 @import './navigation';
 @import './page_header';
