--- a/eos-icons-react/src/assets/scss/components/icon-how-to.scss
+++ b/eos-icons-react/src/assets/scss/components/icon-how-to.scss
@@ -4,7 +4,7 @@
   width: 100%;
   bottom: 0;
   z-index: 10;
-  padding-bottom: $m;
+  padding-bottom: $z-index-10;
 
   .container {
     padding: 0;
