--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -14,7 +14,7 @@
 @import './toggle';
 @import './customize-icons-panel';
 @import './contributor';
-@import './icon_how_to';
+@import './icon-how-to';
 @import './code';
 @import './toolbar';
 @import './badge';
