--- a/eos-icons-react/src/assets/scss/variables/z-index.scss
+++ b/eos-icons-react/src/assets/scss/variables/z-index.scss
@@ -1,4 +1,4 @@
-/* Use 1 (normal) for back, 10 for middle (modals, floating elements) and 100 front (extreme cases)  */
+/* Use 1 (normal) for back, 10 for middle (floating elements) and 100 front (modals)  */
 $z-index-1: 1;
 $z-index-10: 10;
 $z-index-100: 100;
