--- a/eos-icons-react/src/assets/scss/components/index.scss
+++ b/eos-icons-react/src/assets/scss/components/index.scss
@@ -6,7 +6,7 @@
 @import './icon-list';
 @import './modal';
 @import './navigation';
-@import './page_header';
+@import './page-header';
 @import './searchBar';
 @import './tabs';
 @import './generating-font';
