use lighter gray

--- a/eos-icons-react/src/assets/scss/components/icon-how-to.scss
+++ b/eos-icons-react/src/assets/scss/components/icon-how-to.scss
@@ -1,5 +1,5 @@
 .how-to-use-block {
-  background-color: #ececec;
+  background-color: $lightest-gray;
   bottom: 0;
   padding-bottom: $m;
   position: fixed;
