--- a/eos-icons-react/src/assets/scss/components/toolbar.scss
+++ b/eos-icons-react/src/assets/scss/components/toolbar.scss
@@ -1,6 +1,6 @@
 .toolbar {
   align-items: center;
-  background-color: $lighter-gray;
+  background-color: $lightest-gray;
   display: flex;
   justify-content: flex-end;
   padding: $m;
