--- a/eos-icons-react/src/assets/scss/base/inputs.scss
+++ b/eos-icons-react/src/assets/scss/base/inputs.scss
@@ -11,11 +11,12 @@ input {
     border-radius: 25px 0 0 25px;
   }
 
-  button:last-child {
+  button:last-child,
+  .btn:last-child {
     border-radius: 0 25px 25px 0;
   }
 
   .input-grow {
     flex-grow: 1;
   }
-  }
+}
