--- a/eos-icons-react/src/assets/scss/components/code.scss
+++ b/eos-icons-react/src/assets/scss/components/code.scss
@@ -1,8 +1,10 @@
 .code{
+  background: #232323;
+  border-bottom: 4px solid #4CAF50;
   border-radius: 2px;
-  border: 1px solid #c8c8c8;
-  color: #505050;
+  color: #cccccc;
   display: block;
+  font-size: 14px;
   padding: 10px;
   white-space: pre-line;
 }
