--- a/eos-icons-react/src/assets/scss/components/navigation.scss
+++ b/eos-icons-react/src/assets/scss/components/navigation.scss
@@ -6,6 +6,7 @@ header {
   padding: $m;
   position: sticky;
   top: 0;
+  z-index: 10;
 
   .brand {
     align-items: center;
@@ -21,7 +22,6 @@ header {
 
   nav {
     font-size: 16px;
-    /* Reset links decoration */
 
     a,
     a:visited {
