added scroll to top button

--- a/src/assets/scss/variables/colors.scss
+++ b/src/assets/scss/variables/colors.scss
@@ -14,6 +14,7 @@ $codes: #505050;
 $nav-border-color: #e3864e;
 $icons-picker-loading-background-color: rgba(0, 0, 0, 0.7);
 $modal-background-color: rgba(0, 0, 0, 0.7);
+$shadow-color: rgba(0, 0, 0, 0.5);
 
 /* Gradient */
 
